# NetworkEngine

./: .gitignore  CMakeLists.txt  README.md  config.yaml
Client/: CMakeLists.txt
Client/data/: achievements.yaml
Client/data/scene/: LoginMenu.yaml  PlayMenu.yaml  scene.yaml  scene__.yaml
Client/data/template/: Camera.yaml  Cube.yaml  Ground.yaml  Player.yaml
Client/include/: Client.h
Client/include/Component/: BallShootComponent.h  LoginMenu.h  PlayMenu.h
Client/src/: Client.cpp  main.cpp
Client/src/Component/: BallShootComponent.cpp  LoginMenu.cpp  PlayMenu.cpp
Editor/: CMakeLists.txt
Editor/data/Editor/scene/: editor_default.yaml
Editor/data/Editor/template/: Cube.yaml  SceneCleaner.yaml  Sphere.yaml
Editor/data/Game/scene/: scene.yaml
Editor/data/Game/template/: Ball.yaml
Editor/include/: Editor.h
Editor/include/Common/: ComponentRegister.h
Editor/include/Component/: ActionGui.h  ProjectTemplateGuiComponent.h  ProjectTreeGuiComponent.h  PropertiesEditorGui.h
Editor/include/Editor/: Editor.h
Editor/include/Editor/Component/: ActionGui.h  ProjectTemplateGuiComponent.h  ProjectTreeGuiComponent.h  PropertiesEditorGui.h  SceneCleanerComponent.h
Editor/include/Editor/System/: EditorDisplaySystemImpl.h
Editor/include/Game/: App.h
Editor/src/: Editor.cpp  main.cpp
Editor/src/Common/: ComponentRegister.cpp
Editor/src/Component/: ActionGui.cpp  ProjectTemplateGuiComponent.cpp  ProjectTreeGuiComponent.cpp  PropertiesEditorGui.cpp
Editor/src/Editor/: Editor.cpp
Editor/src/Editor/Component/: ActionGui.cpp  ProjectTemplateGuiComponent.cpp  ProjectTreeGuiComponent.cpp  PropertiesEditorGui.cpp  SceneCleanerComponent.cpp
Editor/src/Editor/System/: EditorDisplaySystemImpl.cpp
Editor/src/Game/: App.cpp
Editor/src/Game/Component/: BallShootComponent.cpp
Game/: CMakeLists.txt
Game/data/: example_scene.yaml  scene.yaml
Game/data/scene/: scene.yaml
Game/include/: App.h  Cube.h
Game/include/Component/: BallShootComponent.h
Game/src/: Cube.cpp  main.cpp
Game/src/Component/: BallShootComponent.cpp
Game/src/Examples/: BulletExample.cpp  CubeExample.cpp  TriangleExample.cpp
NetworkEngine/: CMakeLists.txt
NetworkEngine/include/: Engine.h  Entity.h  Game.h  GlobalConstants.h  KeyCode.h  Scene.h  System.h  Timing.h  TypeDef.h
NetworkEngine/include/Component/: AlternateLogicComponent.h  CameraComponent.h  ColoredDrawableComponent.h  Component.h  DisplayComponent.h  GuiComponent.h  InterpolationComponent.h  LogicComponent.h  MeshGroupComponent.h  PhysicsComponent.h  RigidbodyComponent.h  ShapeComponent.h  TransformComponent.h
NetworkEngine/include/Enums/: NetworkMessage.h
NetworkEngine/include/Functions/: Crc32.h  Network.h  RayCast.h  Serialization.h
NetworkEngine/include/System/: AlternateLogicSystem.h  ClientNetworkSystem.h  DisplaySystem.h  DisplaySystemImpl.h  EntitySystem.h  GuiSystem.h  InputSystem.h  InterpolationSystem.h  LogicSystem.h  PhysicsSystem.h  ServerInputSystem.h  ServerNetworkSystem.h  System.h
NetworkEngine/include/Utils/: ColoredDrawable.h  InstanceData.h  LinkingContext.h  MagnumScene.h
NetworkEngine/src/: Entity.cpp  Game.cpp  GlobalConstants.cpp  Scene.cpp  TypeDef.cpp  tmp.cpp
NetworkEngine/src/Component/: AlternateLogicComponent.cpp  CameraComponent.cpp  ColoredDrawableComponent.cpp  Component.cpp  DisplayComponent.cpp  GuiComponent.cpp  InterpolationComponent.cpp  LogicComponent.cpp  MeshGroupComponent.cpp  PhysicsComponent.cpp  RigidbodyComponent.cpp  ShapeComponent.cpp  TransformComponent.cpp
NetworkEngine/src/Functions/: Network.cpp  RayCast.cpp  Serialization.cpp
NetworkEngine/src/System/: AlternateLogicSystem.cpp  ClientNetworkSystem.cpp  DisplaySystem.cpp  DisplaySystemImpl.cpp  EntitySystem.cpp  GuiSystem.cpp  InputSystem.cpp  InterpolationSystem.cpp  LogicSystem.cpp  PhysicsSystem.cpp  ServerInputSystem.cpp  ServerNetworkSystem.cpp  System.cpp
NetworkEngine/src/Utils/: ColoredDrawable.cpp  LinkingContext.cpp  MagnumScene.cpp
Server/: CMakeLists.txt  server_config.yaml
Server/data/scene/: scene.yaml  scene_.yaml  scene__.yaml
Server/data/template/: Ball.yaml  Player.yaml
Server/include/: Server.h
Server/include/Component/: BallShootComponent.h  GameManager.h  Object.h  Player.h
Server/include/System/: ServerInputSystem.h
Server/src/: Server.cpp  main.cpp
Server/src/Component/: BallShootComponent.cpp  GameManager.cpp  Object.cpp  Player.cpp
WebAPI/: Achievement.cs  GameDb.cs  GameRestApi.csproj  GameRestApi.sln  MatchServer.cs  MatchServerDTO.cs  Program.cs  Statistic.cs  StatisticDTO.cs  User.cs  UserDTO.cs  cube_game.db  cube_game.db-shm  cube_game.db-wal
WebAPI/Migrations/: 20250430180410_InitialCreate.Designer.cs  20250430180410_InitialCreate.cs  20250501101437_AddPlay10Achievement.Designer.cs  20250501101437_AddPlay10Achievement.cs  20250501135544_InitialCreate.Designer.cs  20250501135544_InitialCreate.cs  GameDbModelSnapshot.cs
WebAPI/Properties/: launchSettings.json
